# Emily

./: CAMERA_README.md  COMPLETE_CAMERA_README.md  build_log.txt  build_project.bat  build_project.ps1  partitions.csv  sdkconfig  sdkconfig.old
.claude/: settings.local.json
.claude/skills/release-docs/: SKILL.md
.clawhub/: lock.json
components/espressif__esp_lcd_touch_ft5x06/: esp_lcd_touch_ft5x06.c
main/: CMakeLists.txt  c3_uart.c  c3_uart.h  camera_client.c  camera_client.h  idf_component.yml  jpeg_decoder.c  jpeg_decoder.h  spi_lcd_touch_example_main.c  wifi_scanner.c  wifi_scanner.h
main/custom/: gxhtc3.c  gxhtc3.h  lv_conf_ext.h
main/ui/: ui_about.c  ui_about.h  ui_brightness.c  ui_brightness.h  ui_camera.c  ui_camera.h  ui_home.c  ui_home.h  ui_settings.c  ui_settings.h  ui_temp.c  ui_temp.h  ui_wifi.c  ui_wifi.h
skills/today-task/: config.json  update_config.json
skills/today-task/.clawhub/: origin.json
